<resources>
    <string name="app_name">rcdm</string>
    <string name="title_info">ИНФО</string>
    <string name="title_easd">ЕАСД</string>
    <string name="title_notes">ЗАМЕТКИ</string>
    <string name="details">Детали</string>
    <string name="heading">Тема</string>
    <string name="description">Описание</string>
    <string name="delete_question">Вы уверены, что хотите удалить?</string>
    <string name="cancel">Отмена</string>
    <string name="orange">orange</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="pink">pink</string>
    <string name="defaultColor">default</string>
    <string name="add_new_note">Добавить новую заметку</string>
    <string name="edit_fragment_note">Редактировать заметку</string>
    <string name="save_button">Сохранить</string>
    <string name="add_button">Добавить</string>
    <string name="share_note">Поделиться заметкой</string>
    <string name="note_details">Тема: %1$s; Описание: %2$s</string>
    <string name="otstupleniya">Отступления</string>
    <string name="ait_heading">АВТОМАТИКА И ТЕЛЕМЕХАНИКА</string>
    <string name="alsn_interval_heading">Длительность первого интервала кода АЛСН</string>
    <string name="alsn_interval_description">
        - 0,12 ÷ 0,18 с (включительно) – норма, устранения не требуется;\n
        - увеличение длительности интервала до 0,2с – устраняется в плановом порядке;\n
        - увеличение длительности интервала более 0,2с (включительно) – устраняется в первоочередном порядке;\n
        - уменьшение длительности интервала до 0,1с – устраняется в плановом порядке;\n
        - уменьшение длительности интервала менее 0,1с (включительно) – устраняется в первоочередном порядке.\n
    </string>
    <string name="alsn_tok_post_heading">Амплитуда тока АЛСН (при электрической тяге постоянного тока)</string>
    <string name="alsn_tok_post_description">
        Входной конец РЦ:\n
        - 2,0А – минимальная норма;\n
        - от 1,8А (включительно) до 2,0А (исключительно) – устраняется в плановом порядке;\n
        - менее 1,8А – устраняется в первоочередном порядке.\n\n
        Выходной конец РЦ:\n
        - 25А – максимальная норма;\n
        - от 25А (исключительно) до 30 А – устраняется в плановом порядке;\n
        - более 30А – устраняется в первоочередном порядке.
    </string>
    <string name="alsn_tok_per_heading">Амплитуда тока АЛСН (при электрической тяге переменного тока)</string>
    <string name="alsn_tok_per_description">
        Входной конец РЦ:\n
        - 1,4А – минимальная норма;\n
        - от 1,2А (включительно) до 1,4А (исключительно) – устраняется в плановом порядке;\n
        - менее 1,2А – устраняется в первоочередном порядке.\n\n
        Выходной конец РЦ:\n
        - 25А – максимальная норма;\n
        - от 25А (исключительно) до 30А – устраняется в плановом порядке;\n
        - более 30А – устраняется в первоочередном порядке.
    </string>
    <string name="alsn_tok_auto_heading">Амплитуда тока АЛСН (при автономной тяге)</string>
    <string name="alsn_tok_auto_description">
        Входной конец РЦ:\n
        - 1,2А – минимальная норма;\n
        - от 1,0А (включительно) до 1,2А (исключительно) – устраняется в плановом порядке;\n
        - менее 1,0А – устраняется в первоочередном порядке.\n\n
        Выходной конец РЦ:\n
        - 25А – максимальная норма;\n
        - от 25А (исключительно) до 30А – устраняется в плановом порядке;\n
        - более 30А – устраняется в первоочередном порядке.
    </string>
    <string name="alsen_tok_heading">Амплитуда тока АЛС-ЕН</string>
    <string name="alsen_tok_description">
        - от 0,28А (включительно) до 6,0А (включительно) – норма для РЦ, оборудованной АЛС-ЕН;\n
        - уменьшение амплитуды до 0,25А (включительно) – устраняется в плановом порядке;\n
        - уменьшение амплитуды менее 0,25А – устраняется в первоочередном порядке;\n
        - увеличение амплитуды до 6,6А (включительно) – устраняется в плановом порядке;\n
        - увеличение амплитуды более 6,6А – устраняется в первоочередном порядке.\n
        - Для рельсовых цепей, кодируемых одновременно сигналами АЛС-ЕН и АЛСН, должно соблюдаться следующее соотношение величин токов:\n
        \t\t- до 1:10 (включительно) – норма;\n
        \t\t- более 1:10 – устраняется в плановом порядке.
    </string>
    <string name="pam_heading">Паразитная амплитудная модуляция</string>
    <string name="pam_description">
        \tВзаимное влияние сигналов АЛСН и АЛС-ЕН при одновременном кодировании РЦ (определяется автоматически измерительным комплексом):\n
        - до 15% (включительно) – норма;\n
        - от 15% (исключительно) до 20% – устраняется в плановом порядке;\n
        - более 20% – устраняется в первоочередном порядке.
    </string>
    <string name="saut_heading">САУТ</string>
    <string name="saut_description">
        Амплитуда тока в шлейфе САУТ:\n
        - 0,35A и более – норма;\n
        - менее 0,35А – устраняется в плановом порядке.\n\n
        Взаимное влияние токов в шлейфах САУТ и иные искажения формы осциллограммы:\n
        - наличие выбросов/просадок сигнала до 10% (включительно) – норма;\n
        - наличие выбросов/просадок сигнала более 10% – устраняется в плановом порядке.\n\n
        Пульсация тока в шлейфе САУТ:\n
        - наличие пульсации более 10% от среднего значения в шлейфе – устраняется в плановом порядке.\n\n
        Соответствие кода (кодовой посылки) устройств САУТ:\n
        - соответствует маршруту и условиям движения – норма;\n
        - не соответствует маршруту и условиям движения – опасное нарушение.\n\n
        Соответствие комбинации частот и шлейфов установленному маршруту:\n
        - соответствует маршруту и условиям движения – норма;\n
        - не соответствует маршруту и условиям движения – опасное нарушение.\n\n
        Нарушение чередования КПТШ на перегоне:\n
        - отсутствует – норма;\n
        - присутствует – устраняется в первоочередном порядке.\n\n
        Кратковременное прерывание тока (дребезг) в шлейфе устройства САУТ:\n
        - присутствует – устраняется в первоочередном порядке.\n\n
        Точка САУТ не работает – устраняется в первоочередном порядке (кроме случаев выключения точки САУТ в установленном порядке).\n\n

        Длины шлейфов путевого устройства САУТ:\n
        - отклонение более ± 0,15м при соответствии нормам проектирования – устраняется в плановом порядке;\n
        - проезд ТПО (остановка в границах блок-участка) - устраняется в первоочередном порядке;\n
        - проезд ТПО (остановка за границей блок-участка) - устраняется незамедлительно;\n
        - недоезд до ТПО - устраняется в первоочередном порядке;\n
        - несоответствие скорости - устраняется в первоочередном порядке.
    </string>
    <string name="ktsm_heading">КТСМ-02</string>
    <string name="ktsm_description">
        - настройки по нормативам, показания в диапазоне не более ± 6°C – норма;\n\n
        - завышенный уровень настройки, показания с превышением 6°C – устраняется в плановом порядке;\n\n
        - заниженный уровень настройки − занижение показаний более чем на 6°C – устраняется в первоочередном порядке;\n\n
        - несрабатывание комплекса КТСМ – занижение показаний более чем на 12°С − опасное нарушение.
    </string>
    <string name="ktsm_pkl_heading">КТСМ-01 ПКЛ</string>
    <string name="ktsm_pkl_description">
        - несрабатывание комплекса КТСМ при показании от 30 и ниже квантов – опасное нарушение;\n\n
        - заниженный уровень настройки, показания от 31 до 40 квантов – устраняется в первоочередном порядке;\n\n
        - настройки по нормативам, показания в диапазоне от 41 до 59 квантов – норма;\n\n
        - завышенный уровень настройки, показания от 60 квантов и выше – устраняется в плановом порядке;
    </string>
    <string name="ps_heading">ПУТЕИЗМЕРЕНИЕ</string>
    <string name="shirina_heading">Ширина колеи</string>
    <string name="shirina_description">
        \n\t-Номинальный размер ширины колеи:\n
        при радиусе 350м и более – 1520мм;\n
        при радиусе от 349м до 300м – 1530мм;\n
        при радиусе 299м и менее – 1535мм.\n\n
        \t-На участках с рельсошпальной решеткой сборки до 1970 года, в том числе старогодной решеткой допускается:\n
        при радиусе 650м и более – 1524мм;\n
        при радиусе от 650м до 450м – 1530мм;\n
        при радиусе от 449м до 350м – 1535мм;\n
        при радиусе 349м и менее – 1540мм.\n\n
        \t-Ширина рельсовой колеи на стрелочных переводах не допускается более 1546 мм.
    </string>
    <string name="oshk_heading">ОШК</string>
    <string name="oshk_description">\n\tУклон отвода ширины рельсовой колеи определяется на базе 2м без учета
        поправки на неравномерность бокового износа, не подлежит оценке в
        +
        уравнительных стыках и приборах, глухих пересечениях, стрелочных
        переводах в зоне от стыка рамного рельса до корня остряков, в местах
        примыкания сердечника к усовику крестовины.
    </string>
    <string name="uroven_heading">Уровень</string>
    <string name="uroven_description">Величины отступлений</string>
    <string name="perecos_heading">Перекос</string>
    <string name="perecos_description">Величины отступлений</string>
    <string name="rihtovka_heading">Угол в плане</string>
    <string name="rihtovka_description">\n\tПоложение пути в плане (рихтовка) – оценивается разностью смежных
        стрел изгиба рельсовых нитей от хорды длиной 20м. Оценке подлежат
        отступления в плане при расстоянии между вершинами – экстремальными
        значениями отклонений от нулевой линии рихтовки до 20м (что соответствует
        длинам неровностей до 40м).\n\n
        \tВ круговых и переходных кривых оцениваются отступления по наружной
        нити, в прямых участках – по рихтовочной нити, неисправности IV степени в
        прямых участках – по обеим нитям. Отступления в плане оцениваются
        поштучно.
    </string>
    <string name="prosadka_heading">Просадка</string>
    <string name="prosadka_description">\n\tВеличина просадки длиной до 6м включительно определяется суммой
        амплитуд двух полуволн, просадки длиной более 6м до 10м оцениваются по
        максимальной величине, на расстоянии 6м от той из вершин, где величина
        просадки наибольшая
    </string>
    <string name="sochetaniya_heading">Сочетания</string>
    <string name="sochetaniya_description">\n\tДля путей с допустимой скоростью движения грузовых и
        пассажирских поездов более 60км/ч установлены следующие ограничения скорости по сочетанию отступлений:\n
        \tПри сочетании перекоса или просадки и неровности в плане величиной,
        более указанной в таблице и при разнице в координатах отступлений:\n
        - 12м и менее, при установленной скорости поездов 80км/ч и менее;\n
        - 20м и менее при установленной скорости от 81 до 140км/ч;\n\n
        До 60км/ч при наличии трех и более:\n
        - отступлений в плане по рихтовочной нити длиной до 20м и величиной более
        25мм на отрезке длиной 75м;\n
        - просадок на одной и той же рельсовой нити величиной более 15мм на отрезке
        длиной 30м;\n
        - перекосов длиной до 10м величиной более 16 мм на отрезке длиной 30м.
    </string>
    <string name="prosadka_is_heading">Просадка в ИС</string>
    <string name="prosadka_is_description"></string>
    <string name="most_and_tonnel_heading">Отступления в зоне мостов и тоннелей</string>
    <string name="most_and_tonnel_description">Дополнительная оценка отступлений ГРК на мостах и в тоннелях
        производится:\n
        - на средних мостах, полной длиной от 25 до 100м и подходах к ним по
        200м в каждую сторону;\n
        - на больших мостах, длиной более 100м, тоннелях и подходах к ним по
        500м в каждую сторону.
    </string>
    <string name="nk_heading">ДЕФЕКТОСКОПИЯ</string>
    <string name="ks_heading">КОНТАКТНАЯ СЕТЬ</string>
    <string name="video_headin">ВИДЕОКОНТРОЛЬ</string>
</resources>