<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.egorpoprotskiy.rcdm.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" >
        <action
            android:id="@+id/action_navigation_info_to_oneSystemFragment"
            app:destination="@id/oneSystemFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.egorpoprotskiy.rcdm.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes"
        app:navGraph="@navigation/mobile_navigation">
        <action
            android:id="@+id/action_navigation_notes_to_noteDetailFragment"
            app:destination="@id/noteDetailFragment" />
        <action
            android:id="@+id/action_navigation_notes_to_noteAddFragment"
            app:destination="@id/noteAddFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_easd"
        android:name="com.egorpoprotskiy.rcdm.ui.easd.EasdFragment"
        android:label="@string/title_easd"
        tools:layout="@layout/fragment_easd" />

    <fragment
        android:id="@+id/noteAddFragment"
        android:name="com.egorpoprotskiy.rcdm.ui.notes.NoteAddFragment"
        android:label="{note}"
        tools:layout="@layout/fragment_note_add" >
        <action
            android:id="@+id/action_noteAddFragment_to_navigation_notes"
            app:destination="@id/navigation_notes" />
        <argument
            android:name="note"
            app:argType="string" />
        <argument
            android:name="item_id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/noteDetailFragment"
        android:name="com.egorpoprotskiy.rcdm.ui.notes.NoteDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_note_detail" >
<!--        <action-->
<!--            android:id="@+id/action_noteDetailFragment_to_noteAddFragment"-->
<!--            app:destination="@id/noteAddFragment" />-->
        <argument
            android:name="item_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/oneSystemFragment"
        android:name="com.egorpoprotskiy.rcdm.ui.info.OneSystemFragment"
        android:label="fragment_one_system"
        tools:layout="@layout/fragment_one_system" >
        <argument
            android:name="allSystem"
            app:argType="string"/>
        <action
            android:id="@+id/action_oneSystemFragment_to_infoDetailFragment"
            app:destination="@id/infoDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoDetailFragment"
        android:name="com.egorpoprotskiy.rcdm.ui.info.InfoDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_info_detail" >
        <argument
            android:name="heading"
            app:argType="string"/>
    </fragment>

</navigation>