<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginAll2"
    tools:context=".ui.info.InfoFragmentViewModel">

    <TextView
        android:id="@+id/tv_ps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ps_heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ps"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_ps_1" />

    <TextView
        android:id="@+id/tv_ait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_ps"
        android:layout_marginTop="@dimen/top"
        android:text="@string/ait_heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ait"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_ait_1" />

    <TextView
        android:id="@+id/tv_ks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_ait"
        android:layout_marginTop="@dimen/top"
        android:text="@string/ks_heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ks"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_ks_1" />

    <TextView
        android:id="@+id/tv_nk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_ks"
        android:layout_marginTop="@dimen/top"
        android:text="@string/nk_heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_nk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nk"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_nk_1" />

    <TextView
        android:id="@+id/tv_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_nk"
        android:layout_marginTop="@dimen/top"
        android:text="@string/video_headin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_video"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_video_1" />

</androidx.constraintlayout.widget.ConstraintLayout>